--- a/pkg/fwi.fbp/DESCRIPTION
+++ b/pkg/fwi.fbp/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Fire Weather Index System and Fire Behaviour Prediction System Calculations
 Version: 1.0
 Date: 2012-10-12
-Author: Xianli Wang, Alan Cantin, Marc-Andre; Parisien, Mike Wotton, Kerry Anderson, and Mike Flannigan
+Author: Xianli Wang, Alan Cantin, Marc-Andre Parisien, Mike Wotton, Kerry Anderson, and Mike Flannigan
 Maintainer: Alan Cantin <Alan.Cantin@RNCan-NRCan.gc.ca>
 Depends: R (>= 2.11.0)
 Description: This package provides three new functions to calculate the outputs of the two main components of the Canadian Forest Fire Danger Rating System (CFFDRS): the Fire Weather Index (FWI) System and the Fire Behaviour Prediction (FBP) System.
