--- a/pkg/fwi.fbp/DESCRIPTION
+++ b/pkg/fwi.fbp/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: fwi.fbp
 Type: Package
 Title: Fire Weather Index System and Fire Behaviour Prediction System Calculations
-Version: 1.5
-Date: 2014-06-19
+Version: 1.6
+Date: 2015-12-14
 Author: Xianli Wang, Alan Cantin, Marc-Andre Parisien, Mike Wotton, Kerry Anderson, and Mike Flannigan
-Maintainer: Alan Cantin <Alan.Cantin@RNCan-NRCan.gc.ca>
+Maintainer: Alan Cantin <Alan.Cantin@Canada.ca>
 Depends: R (>= 2.11.0)
 Description: This package provides three new functions to calculate the outputs of the two main components of the Canadian Forest Fire Danger Rating System (CFFDRS): the Fire Weather Index (FWI) System and the Fire Behaviour Prediction (FBP) System.
 License: GPL-2
