--- a/pkg/fwi.fbp/DESCRIPTION
+++ b/pkg/fwi.fbp/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: fwi.fbp
 Type: Package
-Title: Fire Weather Index System and Fire Behaviour Prediction System Calculations  --[Deprecated]-- See replacement package 'cffdrs'
+Title: Fire Weather Index System and Fire Behaviour Prediction System Calculations
 Version: 1.7
-Date: 2016-01-05
+Date: 2016-01-06
 Author: Xianli Wang, Alan Cantin, Marc-Andre Parisien, Mike Wotton, Kerry Anderson, and Mike Flannigan
 Maintainer: Alan Cantin <Alan.Cantin@Canada.ca>
 Depends: R (>= 2.15.1)
-Description: This package provides three functions to calculate the outputs of the two main components of the Canadian Forest Fire Danger Rating System (CFFDRS): the Fire Weather Index (FWI) System and the Fire Behaviour Prediction (FBP) System.
+Description: Provides three functions to calculate the outputs of the two main components of the Canadian Forest Fire Danger Rating System (CFFDRS): the Fire Weather Index (FWI) System and the Fire Behaviour Prediction (FBP) System.
 License: GPL-2
 URL: https://r-forge.r-project.org/projects/fwi-fbp/
 BugReports: https://r-forge.r-project.org/tracker/?group_id=1453
